[package]
name = "slamr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrsac = "0.10.0"
bitarray = "0.10.0"
image = "0.24.4"
imageproc = "0.23.0"
nalgebra = "0.31.2"
once_cell = "1.15.0"
rand = "0.8.5"
rand_distr = "0.4.3"
sample-consensus = "1.0.2"
space = "0.18.0"
